--- a/Personal_Tutor.ipynb
+++ b/Personal_Tutor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Personal-Tutor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhSom1oGWIjuqAYYATA5at",
+      "authorship_tag": "ABX9TyM6AToncTP0euHsq92G6kjH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,162 @@
         "# Personal Tutor\n",
         "\n",
         "This notebook contains code for the Personal Tutor System built for CS673: Computational Creativity.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kzpCKzikWxA3",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Imports"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kUN5YCJsWzAs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from torchvision import transforms, utils, datasets\n",
+        "from tqdm import tqdm\n",
+        "from torch.nn.parameter import Parameter\n",
+        "import pdb\n",
+        "import torchvision\n",
+        "import os\n",
+        "import gzip\n",
+        "import tarfile\n",
+        "from PIL import Image, ImageOps\n",
+        "import gc\n",
+        "import pdb\n",
+        "import pandas as pd\n",
+        "from IPython.core.ultratb import AutoFormattedTB\n",
+        "__ITB__ = AutoFormattedTB(mode = 'Verbose',color_scheme='LightBg', tb_offset = 1)\n",
+        "\n",
+        "assert torch.cuda.is_available(), \"Request a GPU from Runtime > Change Runtime\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sn_JZMaHVEOg",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Word Distribution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cx7LXT0sVLjI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "61a6e364-f61d-4734-c2b8-4d463d384310"
+      },
+      "source": [
+        "# Download the data from GitHub\n",
+        "!wget -O word_dist_sample.csv https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_dist_sample.csv"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2020-01-28 22:46:35--  https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_distribution_genres.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 847166 (827K) [text/plain]\n",
+            "Saving to: ‘word_dist.csv’\n",
+            "\n",
+            "\rword_dist.csv         0%[                    ]       0  --.-KB/s               \rword_dist.csv       100%[===================>] 827.31K  --.-KB/s    in 0.06s   \n",
+            "\n",
+            "2020-01-28 22:46:36 (13.4 MB/s) - ‘word_dist.csv’ saved [847166/847166]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RWVYaEVrV065",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class WordDist(Dataset):\n",
+        "  def __init__(self):\n",
+        "    self.df = pd.read_csv('word_dist_sample.csv')\n",
+        "  \n",
+        "  def getdf(self):\n",
+        "    return self.df\n",
+        "\n",
+        "  def __getitem__(self, index):\n",
+        "    return df['lemma'][index], df['TOT FREQ'][index]\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.df)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NP2HehFTXIIN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6a3f4ff6-a72e-4eaf-e0b7-1901022f51b3"
+      },
+      "source": [
+        "words = WordDist()\n",
+        "len(words)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6003"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S9LYBu6EVIkA",
+        "colab_type": "text"
+      },
+      "source": [
+        "## GPT2 Language Model"
       ]
     },
     {
@@ -85,11 +241,11 @@
       "metadata": {
         "id": "WsxPzXOLRzwE",
         "colab_type": "code",
+        "outputId": "f42a6579-3a9e-4446-e0f9-a6e30bdc498c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f42a6579-3a9e-4446-e0f9-a6e30bdc498c"
+        }
       },
       "source": [
         "# Fine-Tune on Lord of the Rings using the simplified GPT2 Model\n",
@@ -97,7 +253,7 @@
         "gpt2.load_model()\n",
         "gpt2.finetune('./text_files/lotr.txt', return_text=True)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
