--- a/Personal_Tutor.ipynb
+++ b/Personal_Tutor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Personal-Tutor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6AToncTP0euHsq92G6kjH",
+      "authorship_tag": "ABX9TyN0R3y772paVBlzFY4LwqlP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,27 +101,27 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "61a6e364-f61d-4734-c2b8-4d463d384310"
+        "outputId": "4da921cf-d7b3-4628-d556-d46e55c098ce"
       },
       "source": [
-        "# Download the data from GitHub\n",
-        "!wget -O word_dist_sample.csv https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_dist_sample.csv"
+        "# Download the simple word distribution from GitHub\n",
+        "!wget -O word_dist_full.csv https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_dist_full.csv"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-01-28 22:46:35--  https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_distribution_genres.csv\n",
+            "--2020-01-29 15:39:50--  https://raw.githubusercontent.com/ericburdett/cs673-personal-tutor/master/data/word_dist_full.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 847166 (827K) [text/plain]\n",
-            "Saving to: ‘word_dist.csv’\n",
+            "Length: 163042 (159K) [text/plain]\n",
+            "Saving to: ‘word_dist_full.csv’\n",
             "\n",
-            "\rword_dist.csv         0%[                    ]       0  --.-KB/s               \rword_dist.csv       100%[===================>] 827.31K  --.-KB/s    in 0.06s   \n",
+            "\rword_dist_full.csv    0%[                    ]       0  --.-KB/s               \rword_dist_full.csv  100%[===================>] 159.22K  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2020-01-28 22:46:36 (13.4 MB/s) - ‘word_dist.csv’ saved [847166/847166]\n",
+            "2020-01-29 15:39:50 (4.58 MB/s) - ‘word_dist_full.csv’ saved [163042/163042]\n",
             "\n"
           ],
           "name": "stdout"
@@ -138,13 +138,13 @@
       "source": [
         "class WordDist(Dataset):\n",
         "  def __init__(self):\n",
-        "    self.df = pd.read_csv('word_dist_sample.csv')\n",
+        "    self.df = pd.read_csv('word_dist_full.csv', header=None, names=['word', 'freq'])\n",
         "  \n",
         "  def getdf(self):\n",
         "    return self.df\n",
         "\n",
         "  def __getitem__(self, index):\n",
-        "    return df['lemma'][index], df['TOT FREQ'][index]\n",
+        "    return self.df['word'][index], self.df['freq'][index]\n",
         "\n",
         "  def __len__(self):\n",
         "    return len(self.df)"
@@ -159,27 +159,75 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 731
         },
-        "outputId": "6a3f4ff6-a72e-4eaf-e0b7-1901022f51b3"
+        "outputId": "ffa42534-415e-4bb0-a8f8-3fabb4f8630a"
       },
       "source": [
         "words = WordDist()\n",
-        "len(words)"
+        "print('Num Words: ', words)\n",
+        "words[0:20]"
       ],
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Num Words:  <__main__.WordDist object at 0x7fc046786f98>\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "6003"
+              "(0      the\n",
+              " 1       of\n",
+              " 2      and\n",
+              " 3       to\n",
+              " 4        a\n",
+              " 5       in\n",
+              " 6      for\n",
+              " 7       is\n",
+              " 8       on\n",
+              " 9     that\n",
+              " 10      by\n",
+              " 11    this\n",
+              " 12    with\n",
+              " 13       i\n",
+              " 14     you\n",
+              " 15      it\n",
+              " 16     not\n",
+              " 17      or\n",
+              " 18      be\n",
+              " 19     are\n",
+              " Name: word, dtype: object, 0     23135851162\n",
+              " 1     13151942776\n",
+              " 2     12997637966\n",
+              " 3     12136980858\n",
+              " 4      9081174698\n",
+              " 5      8469404971\n",
+              " 6      5933321709\n",
+              " 7      4705743816\n",
+              " 8      3750423199\n",
+              " 9      3400031103\n",
+              " 10     3350048871\n",
+              " 11     3228469771\n",
+              " 12     3183110675\n",
+              " 13     3086225277\n",
+              " 14     2996181025\n",
+              " 15     2813163874\n",
+              " 16     2633487141\n",
+              " 17     2590739907\n",
+              " 18     2398724162\n",
+              " 19     2393614870\n",
+              " Name: freq, dtype: int64)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 14
         }
       ]
     },
