--- a/Personal_Tutor.ipynb
+++ b/Personal_Tutor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Personal-Tutor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiI4oMDnmlpkfswtrLfFa4",
+      "authorship_tag": "ABX9TyO94ZBLw7LhXcbTVOg/sJvg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -485,233 +485,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LZz5lJCgeoDH",
+        "id": "jJB-19P2Rlh3",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!rm -r models"
+        "model = LanguageModel('124M', train_steps=100) # Will fine-tune model everytime this is called! -- Will need to be fixed at some point\n",
+        "generator = SentenceGenerator(language_model=model)"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jJB-19P2Rlh3",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "42d6613c-5b30-44bc-c3a9-c60b040a3adf"
-      },
-      "source": [
-        "model = LanguageModel('124M', train_steps=100)\n",
-        "generator = SentenceGenerator(language_model=model)"
-      ],
-      "execution_count": 123,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Fetching checkpoint:   0%|                                              | 0.00/77.0 [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching checkpoint: 1.05Mit [00:00, 272Mit/s]                                                      \u001b[A\n",
-            "Fetching encoder.json:   0%|                                           | 0.00/1.04M [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching encoder.json: 1.05Mit [00:00, 93.0Mit/s]                                                   \u001b[A\n",
-            "Fetching hparams.json:   0%|                                            | 0.00/90.0 [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching hparams.json: 1.05Mit [00:00, 530Mit/s]                                                    \u001b[A"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading {model_name} model...\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Fetching model.ckpt.data-00000-of-00001:   0%|                          | 0.00/498M [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:   1%|▏                | 5.24M/498M [00:00<00:11, 43.0Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:   8%|█▎               | 38.8M/498M [00:00<00:07, 58.2Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  10%|█▊               | 51.4M/498M [00:00<00:06, 69.3Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  15%|██▌              | 76.5M/498M [00:00<00:04, 86.1Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  20%|███▌              | 98.6M/498M [00:00<00:03, 105Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  23%|████▍              | 115M/498M [00:00<00:03, 103Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  28%|█████▍             | 142M/498M [00:00<00:02, 125Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  32%|██████             | 159M/498M [00:00<00:02, 119Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  37%|██████▉            | 182M/498M [00:01<00:02, 139Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  41%|███████▊           | 203M/498M [00:01<00:01, 154Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  46%|████████▋          | 228M/498M [00:01<00:01, 155Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  49%|█████████▎         | 245M/498M [00:01<00:01, 138Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  54%|██████████▎        | 269M/498M [00:01<00:01, 144Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  59%|███████████▎       | 296M/498M [00:01<00:01, 166Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  63%|████████████       | 315M/498M [00:01<00:01, 157Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  70%|█████████████▏     | 347M/498M [00:02<00:00, 185Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  74%|██████████████     | 369M/498M [00:02<00:00, 186Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  78%|██████████████▉    | 390M/498M [00:02<00:00, 171Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  82%|███████████████▋   | 410M/498M [00:02<00:00, 132Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  88%|████████████████▋  | 437M/498M [00:02<00:00, 152Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  92%|█████████████████▍ | 456M/498M [00:02<00:00, 117Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  95%|██████████████████ | 473M/498M [00:02<00:00, 124Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001:  98%|█████████████████▋| 489M/498M [00:03<00:00, 70.6Mit/s]\u001b[A\n",
-            "Fetching model.ckpt.data-00000-of-00001: 498Mit [00:03, 138Mit/s]                                   \u001b[A\n",
-            "Fetching model.ckpt.index:   0%|                                       | 0.00/5.21k [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching model.ckpt.index: 1.05Mit [00:00, 394Mit/s]                                                \u001b[A\n",
-            "Fetching model.ckpt.meta:   0%|                                         | 0.00/471k [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching model.ckpt.meta: 1.05Mit [00:00, 140Mit/s]                                                 \u001b[A\n",
-            "Fetching vocab.bpe:   0%|                                               | 0.00/456k [00:00<?, ?it/s]\u001b[A\n",
-            "Fetching vocab.bpe: 1.05Mit [00:00, 177Mit/s]                                                       \u001b[A"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Loading checkpoint models/124M/model.ckpt\n",
-            "INFO:tensorflow:Restoring parameters from models/124M/model.ckpt\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  0%|          | 0/1 [00:00<?, ?it/s]\u001b[A"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Loading dataset...\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "100%|██████████| 1/1 [00:28<00:00, 28.04s/it]\u001b[A\n",
-            "\u001b[A"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "dataset has 6312984 tokens\n",
-            "Training...\n",
-            "[1 | 7.80] loss=3.59 avg=3.59\n",
-            "[2 | 9.99] loss=3.73 avg=3.66\n",
-            "[3 | 12.19] loss=3.63 avg=3.65\n",
-            "[4 | 14.39] loss=3.51 avg=3.61\n",
-            "[5 | 16.60] loss=3.29 avg=3.55\n",
-            "[6 | 18.81] loss=3.46 avg=3.53\n",
-            "[7 | 21.03] loss=3.43 avg=3.52\n",
-            "[8 | 23.27] loss=3.38 avg=3.50\n",
-            "[9 | 25.51] loss=3.37 avg=3.48\n",
-            "[10 | 27.74] loss=3.40 avg=3.47\n",
-            "[11 | 29.99] loss=3.29 avg=3.46\n",
-            "[12 | 32.24] loss=3.21 avg=3.44\n",
-            "[13 | 34.49] loss=3.33 avg=3.43\n",
-            "[14 | 36.74] loss=2.92 avg=3.39\n",
-            "[15 | 39.02] loss=3.46 avg=3.39\n",
-            "[16 | 41.28] loss=3.38 avg=3.39\n",
-            "[17 | 43.55] loss=2.94 avg=3.36\n",
-            "[18 | 45.80] loss=3.28 avg=3.36\n",
-            "[19 | 48.08] loss=3.38 avg=3.36\n",
-            "[20 | 50.34] loss=3.15 avg=3.35\n",
-            "[21 | 52.62] loss=3.36 avg=3.35\n",
-            "[22 | 54.89] loss=3.20 avg=3.34\n",
-            "[23 | 57.17] loss=3.41 avg=3.35\n",
-            "[24 | 59.46] loss=3.32 avg=3.34\n",
-            "[25 | 61.76] loss=2.89 avg=3.32\n",
-            "[26 | 64.06] loss=3.12 avg=3.32\n",
-            "[27 | 66.36] loss=3.23 avg=3.31\n",
-            "[28 | 68.67] loss=3.09 avg=3.30\n",
-            "[29 | 70.98] loss=3.25 avg=3.30\n",
-            "[30 | 73.30] loss=3.11 avg=3.29\n",
-            "[31 | 75.63] loss=3.29 avg=3.29\n",
-            "[32 | 77.95] loss=3.34 avg=3.29\n",
-            "[33 | 80.28] loss=3.52 avg=3.30\n",
-            "[34 | 82.62] loss=3.40 avg=3.31\n",
-            "[35 | 84.96] loss=3.13 avg=3.30\n",
-            "[36 | 87.32] loss=3.02 avg=3.29\n",
-            "[37 | 89.67] loss=3.51 avg=3.30\n",
-            "[38 | 92.02] loss=3.37 avg=3.30\n",
-            "[39 | 94.40] loss=3.31 avg=3.30\n",
-            "[40 | 96.77] loss=3.21 avg=3.30\n",
-            "[41 | 99.14] loss=3.37 avg=3.30\n",
-            "[42 | 101.52] loss=3.20 avg=3.30\n",
-            "[43 | 103.91] loss=3.23 avg=3.30\n",
-            "[44 | 106.29] loss=3.18 avg=3.29\n",
-            "[45 | 108.69] loss=3.22 avg=3.29\n",
-            "[46 | 111.11] loss=3.03 avg=3.28\n",
-            "[47 | 113.54] loss=3.29 avg=3.28\n",
-            "[48 | 115.95] loss=3.28 avg=3.28\n",
-            "[49 | 118.38] loss=3.17 avg=3.28\n",
-            "[50 | 120.82] loss=3.33 avg=3.28\n",
-            "[51 | 123.28] loss=3.32 avg=3.28\n",
-            "[52 | 125.75] loss=3.25 avg=3.28\n",
-            "[53 | 128.22] loss=3.21 avg=3.28\n",
-            "[54 | 130.74] loss=3.34 avg=3.28\n",
-            "[55 | 133.25] loss=3.56 avg=3.29\n",
-            "[56 | 135.78] loss=3.25 avg=3.29\n",
-            "[57 | 138.33] loss=3.28 avg=3.29\n",
-            "[58 | 140.89] loss=3.20 avg=3.29\n",
-            "[59 | 143.44] loss=2.76 avg=3.27\n",
-            "[60 | 145.99] loss=3.10 avg=3.27\n",
-            "[61 | 148.54] loss=3.14 avg=3.27\n",
-            "[62 | 151.09] loss=3.27 avg=3.27\n",
-            "[63 | 153.64] loss=3.33 avg=3.27\n",
-            "[64 | 156.20] loss=3.37 avg=3.27\n",
-            "[65 | 158.75] loss=3.43 avg=3.27\n",
-            "[66 | 161.28] loss=3.43 avg=3.28\n",
-            "[67 | 163.81] loss=3.31 avg=3.28\n",
-            "[68 | 166.34] loss=3.29 avg=3.28\n",
-            "[69 | 168.85] loss=3.19 avg=3.28\n",
-            "[70 | 171.34] loss=3.12 avg=3.27\n",
-            "[71 | 173.83] loss=3.15 avg=3.27\n",
-            "[72 | 176.32] loss=3.32 avg=3.27\n",
-            "[73 | 178.80] loss=3.30 avg=3.27\n",
-            "[74 | 181.28] loss=2.96 avg=3.27\n",
-            "[75 | 183.75] loss=3.10 avg=3.26\n",
-            "[76 | 186.24] loss=3.19 avg=3.26\n",
-            "[77 | 188.71] loss=3.45 avg=3.27\n",
-            "[78 | 191.19] loss=3.16 avg=3.26\n",
-            "[79 | 193.66] loss=3.02 avg=3.26\n",
-            "[80 | 196.13] loss=3.13 avg=3.26\n",
-            "[81 | 198.61] loss=2.93 avg=3.25\n",
-            "[82 | 201.07] loss=3.47 avg=3.25\n",
-            "[83 | 203.55] loss=3.34 avg=3.26\n",
-            "[84 | 206.03] loss=3.09 avg=3.25\n",
-            "[85 | 208.52] loss=3.14 avg=3.25\n",
-            "[86 | 211.01] loss=3.05 avg=3.25\n",
-            "[87 | 213.50] loss=3.09 avg=3.25\n",
-            "[88 | 216.03] loss=3.13 avg=3.24\n",
-            "[89 | 218.55] loss=3.25 avg=3.24\n",
-            "[90 | 221.06] loss=2.92 avg=3.24\n",
-            "[91 | 223.58] loss=3.46 avg=3.24\n",
-            "[92 | 226.10] loss=3.31 avg=3.24\n",
-            "[93 | 228.63] loss=3.06 avg=3.24\n",
-            "[94 | 231.18] loss=3.39 avg=3.24\n",
-            "[95 | 233.70] loss=3.26 avg=3.24\n",
-            "[96 | 236.25] loss=3.35 avg=3.24\n",
-            "[97 | 238.78] loss=2.76 avg=3.24\n",
-            "[98 | 241.29] loss=3.04 avg=3.23\n",
-            "[99 | 243.82] loss=3.26 avg=3.23\n",
-            "[100 | 246.34] loss=2.99 avg=3.23\n",
-            "Saving checkpoint/run1/model-100\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
