A few codeblocks at the top needed for system

--- a/Personal_Tutor.ipynb
+++ b/Personal_Tutor.ipynb
@@ -37,6 +37,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fkTsKAy36515",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install transformers\n",
+        "!python -m spacy download en_core_web_md\n",
+        "import os\n",
+        "os.kill(os.getpid(), 9) # This will automatically restart the runtime. Colab will show an error... but it works"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fC8-AO9d68JW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!git clone https://github.com/ericburdett/cs673-personal-tutor.git\n",
+        "%cd cs673-personal-tutor/"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p7_S5OFg-qbg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!python system.py"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jVLsHt3cguG_",
@@ -544,7 +587,7 @@
         "scores = EVAL.score_sentences(sentences)\n",
         "print('Produced Sentence: ', sentences[np.argmax(scores)])"
       ],
-      "execution_count": 297,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,11 +613,11 @@
       "metadata": {
         "id": "hyna1Q9h5gOC",
         "colab_type": "code",
+        "outputId": "619d50b4-eb22-4098-c459-1fce1c051338",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "619d50b4-eb22-4098-c459-1fce1c051338"
+        }
       },
       "source": [
         "# Main App Loop\n",
@@ -600,7 +643,7 @@
         "scores = EVAL.score_sentences(sentences)\n",
         "print('Produced Sentence: ', sentences[np.argmax(scores)])"
       ],
-      "execution_count": 305,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
