Working tutor code in colab!

--- a/Personal_Tutor.ipynb
+++ b/Personal_Tutor.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Personal-Tutor.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,14 +58,33 @@
       "metadata": {
         "id": "fC8-AO9d68JW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "e30c2fed-2dc7-4619-f5d1-5ef33aef0a42"
       },
       "source": [
         "!git clone https://github.com/ericburdett/cs673-personal-tutor.git\n",
         "%cd cs673-personal-tutor/"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'cs673-personal-tutor'...\n",
+            "remote: Enumerating objects: 124, done.\u001b[K\n",
+            "remote: Counting objects: 100% (124/124), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (109/109), done.\u001b[K\n",
+            "remote: Total 124 (delta 57), reused 52 (delta 13), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (124/124), 28.23 MiB | 10.08 MiB/s, done.\n",
+            "Resolving deltas: 100% (57/57), done.\n",
+            "/content/cs673-personal-tutor\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -74,7 +94,7 @@
         "colab": {}
       },
       "source": [
-        "!python system.py"
+        "!python tutor.py"
       ],
       "execution_count": 0,
       "outputs": []
